Few bug fixes and more samples added for additional properties

--- a/samples/PINView.Samples/Views/PINSamplesPage.xaml
+++ b/samples/PINView.Samples/Views/PINSamplesPage.xaml
@@ -28,6 +28,10 @@
                 <sampleViews:BoxSpacingSampleView />
                 <sampleViews:AutoDismissKeyboardSampleView />
                 <sampleViews:InputPINProgramaticallySampleView />
+                <sampleViews:FontFamilySampleView />
+                <sampleViews:FontAttributeSampleView />
+                <sampleViews:DotSizeSampleView />
+                <sampleViews:FontSizeSampleView />
             </VerticalStackLayout>
         </ScrollView>
     </ContentPage.Content>
