#10 - Fixed one Android crash issue due to invalid StaticResource.

--- a/samples/PINView.Samples/Views/SampleViews/BoxFocusAnimationSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/BoxFocusAnimationSampleView.xaml
@@ -27,7 +27,7 @@
                     </Label.FormattedText>
                 </Label>
 
-                <StackLayout Padding="{StaticResource 0,20}">
+                <StackLayout Padding="0,20">
 
                     <Label HorizontalTextAlignment="Center" Text="BoxFocusAnimation = ZoomInOut" />
                     <pinView:PINView
