--- a/samples/PINView.Samples/Views/SampleViews/BoxSizeSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/BoxSizeSampleView.xaml
@@ -6,7 +6,7 @@
     xmlns:pinView="clr-namespace:PINView.Maui;assembly=PINView.Maui"
     xmlns:system="clr-namespace:System;assembly=netstandard">
     <ContentView.Content>
-        <Frame BorderColor="{StaticResource PrimaryColor}" Style="{StaticResource SampleViewsContainerFrameStyle}">
+        <Border Stroke="{StaticResource PrimaryColor}" Style="{StaticResource SampleViewsContainerBorderStyle}">
             <VerticalStackLayout>
                 <Label BackgroundColor="{StaticResource PrimaryLightColor}" Style="{StaticResource SampleViewsHeaderLabelStyle}">
                     <Label.FormattedText>
@@ -53,6 +53,6 @@
                         Style="{StaticResource PINViewStyle}" />
                 </VerticalStackLayout>
             </VerticalStackLayout>
-        </Frame>
+        </Border>
     </ContentView.Content>
 </ContentView>
