--- a/samples/PINView.Samples/Views/SampleViews/FontSizeSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/FontSizeSampleView.xaml
@@ -6,7 +6,7 @@
     xmlns:pinView="clr-namespace:PINView.Maui;assembly=PINView.Maui"
     xmlns:system="clr-namespace:System;assembly=netstandard">
     <ContentView.Content>
-        <Frame BorderColor="{StaticResource ColorA}" Style="{StaticResource SampleViewsContainerFrameStyle}">
+        <Border Stroke="{StaticResource ColorA}" Style="{StaticResource SampleViewsContainerBorderStyle}">
             <StackLayout>
 
                 <Label BackgroundColor="{StaticResource LightColorA}" Style="{StaticResource SampleViewsHeaderLabelStyle}">
@@ -47,6 +47,6 @@
                         Color="{DynamicResource ColorA}" />
                 </StackLayout>
             </StackLayout>
-        </Frame>
+        </Border>
     </ContentView.Content>
 </ContentView>
