--- a/samples/PINView.Samples/App.xaml
+++ b/samples/PINView.Samples/App.xaml
@@ -14,10 +14,10 @@
 
         <!--  Sets the colors of Navigationbar's (Toolbar's) TextColor and Background Color  -->
         <!--  For ToolbarItems icon color, Android requires platform specific twiks which is handles separately by DependencyService  -->
-        <!--<Style TargetType="NavigationPage">
-            <Setter Property="BarBackgroundColor" Value="{DynamicResource NavigationBarColor}" />
-            <Setter Property="BarTextColor" Value="{DynamicResource PrimaryTintColor}" />
-        </Style>-->
+        <Style TargetType="NavigationPage">
+            <!--<Setter Property="BarBackgroundColor" Value="{DynamicResource NavigationBarColor}" />-->
+            <Setter Property="BarTextColor" Value="{OnPlatform Android={DynamicResource PrimaryTintColor}, iOS={DynamicResource PrimaryTextColor}}" />
+        </Style>
 
         <Style x:Key="BigLabelStyle" TargetType="Label">
             <Setter Property="FontSize" Value="Large" />
@@ -69,6 +69,13 @@
             <Setter Property="Margin" Value="15,15,15,0" />
             <Setter Property="CornerRadius" Value="{OnPlatform Default=10, Android=0}" />
             <Setter Property="HasShadow" Value="False" />
+        </Style>
+
+        <Style x:Key="SampleViewsContainerBorderStyle" TargetType="Border">
+            <Setter Property="StrokeThickness" Value="1" />
+            <Setter Property="StrokeShape" Value="RoundRectangle 0" />
+            <Setter Property="Margin" Value="15,15,15,0" />
+            <Setter Property="Padding" Value="{OnPlatform Android='1,0', iOS=0}" />
         </Style>
 
     </Application.Resources>
