added registration routine with custom HiddenPinEntry class and extended PINInputType to allow all-uppercase keyboard

--- a/samples/PINView.Samples/Views/SampleViews/PINInputTypeSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/PINInputTypeSampleView.xaml
@@ -43,9 +43,24 @@
                         BoxBackgroundColor="{StaticResource LightColorC}"
                         IsPassword="False"
                         PINInputType="AlphaNumeric"
+                        PINValue="abcd"
+                        Style="{StaticResource PINViewStyle}"
+                        Color="{StaticResource ColorC}" />
+
+                    <Label
+                        Margin="0,20,0,0"
+                        HorizontalTextAlignment="Center"
+                        Text="PINInputType = AlphaNumericUppercase" />
+
+                    <pinView:PINView
+                        x:Name="pinView3"
+                        BoxBackgroundColor="{StaticResource LightColorC}"
+                        IsPassword="False"
+                        PINInputType="AlphaNumericUppercase"
                         PINValue="ABCD"
                         Style="{StaticResource PINViewStyle}"
                         Color="{StaticResource ColorC}" />
+
                 </StackLayout>
 
             </StackLayout>
