--- a/src/PINView/PINView.xaml
+++ b/src/PINView/PINView.xaml
@@ -3,24 +3,25 @@
     x:Class="PINView.Maui.PINView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:helpers="clr-namespace:PINView.Maui.Helpers">
+    xmlns:helpers="clr-namespace:PINView.Maui.Helpers"
+    xmlns:maui="clr-namespace:PINView.Maui">
     <ContentView.Content>
         <Grid HorizontalOptions="Start">
             <!--  This Textbox stays behind the scene to bring up the keyboard and take user input  -->
-            <Entry
+            <maui:HiddenPinEntry
                 x:Name="hiddenTextEntry"
                 HorizontalOptions="Center"
                 Keyboard="Numeric"
                 Opacity="0"
                 WidthRequest="50">
-                <Entry.FontSize>
+                <maui:HiddenPinEntry.FontSize>
                     <OnPlatform x:TypeArguments="x:Double">
                         <On Platform="Android" Value="18" />
                         <On Platform="iOS" Value="22" />
                         <On Platform="WinUI" Value="18" />
                     </OnPlatform>
-                </Entry.FontSize>
-            </Entry>
+                </maui:HiddenPinEntry.FontSize>
+            </maui:HiddenPinEntry>
             <HorizontalStackLayout
                 x:Name="PINBoxContainer"
                 InputTransparent="False"
